--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(60vh - 60px);
+    height: calc(60vh - 60px); 
     gap: 32px;
 }
 
@@ -57,9 +57,9 @@
 }
 
 .hero__section_title{
-    text-align:center;
+    text-align: center;
     font-size : 30px;
-    font-weight:400;
+    font-weight: 400;
 }
 
 .hero__section_input_container{
@@ -89,6 +89,8 @@
     border-right: 2px solid #e0e0e0;
 }
 
+
+
 @media only screen and (max-width: 600px) {
     .navbar__menu_container .link{
         display: none;
@@ -102,7 +104,7 @@
     }
 
     .hero__section{
-        min-height: 80vh;
+        min-height: 80vh; 
     }
 
     .hero__section_input_container{
@@ -123,30 +125,29 @@
     .input_container_location{
         border-right: none;
     }
-    .container__we_offer{
-        margin: 48px auto;
-        width: 80%;
-    
-    }
+}
 
-    .we__offer{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 8px;
-        align-items: center;
-        justify-content: center;
-    }
+.container{
+    margin: 48px auto;
+    width: 80%;
+}
 
-    .we__offer .card{
-        border-radius: 10px;
-        overflow: hidden;
-        border: 1px solid #e0e0e0;
-    }
+.we__offer{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+}
 
-    .we__offer .card img{
-        width: 240px;
-        height: 150px;
-    }
+.we__offer .card{
+    border-radius: 10px;
+    overflow: hidden;
+    border: 1px solid #e0e0e0;
+    transition: all 300ms ease-out;
+}
 
-
+.we__offer .card img{
+    width: 240px;
+    height: 150px;
 }
