--- a/style.css
+++ b/style.css
@@ -148,6 +148,242 @@
 }
 
 .we__offer .card img{
-    width: 240px;
+    width: 100%;
     height: 150px;
+    object-fit: cover;
+    object-position: center;
 }
+
+.we__offer .card h2{
+    padding: 10px 10px 0 10px;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.we__offer .card p{
+    font-size: 13px;
+    padding: 0 10px 15px 10px;
+}
+.we__offer .card:hover {
+    transform: scale(1.05);
+}
+
+.collections h1 {
+    font-weight: 400;
+}
+
+.collections .sub__heading_container {
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+
+.sub__heading_container span:nth-child(2){
+    color: #ff7e8b;
+    font-size: 13px;
+}
+.collections_card_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-top: 24px;
+}
+
+.collections_card_container .card{
+    height: 300px;
+    min-width: 240px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    position: relative;
+}
+
+.card1{
+    background-image: url(images/collection1.jpg);
+}
+
+.card2{
+    background-image: url(images/collection2.jpg);
+}
+
+.card3{
+    background-image: url(images/collection3.jpg);
+}
+.card4{
+    background-image: url(images/collection4.jpg);
+}
+
+.overlay{
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.9)0%,
+        rgba(0, 0, 0, 0.05)50%,
+        rgba(0, 0, 0, 0.05)85%
+    );
+    width: 100%;
+    height: 100%;
+    display: absolute;
+    top: 0;
+    left:0;
+    border-radius: 10px;
+}
+
+.collections_card_container .card .content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: white;
+    padding: 12px 16px;
+    font-size: 14px;
+}
+
+.content h4{
+    font-weight: 400;
+}
+.get__the_app {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 251, 247);
+    width: 100%;
+    padding: 48px 48px;
+  }
+  
+  .get__the_app .semiContainer {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+  
+  .get__the_app .semiContainer .left {
+    flex: 2;
+  }
+  
+  .get__the_app .semiContainer .left img {
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .get__the_app .semiContainer .right {
+    flex: 3;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  
+  .right h1 {
+    font-weight: 500;
+    font-size: 32px;
+  }
+  
+  .right p {
+    font-size: 14px;
+  }
+  
+  .semiContainer .right .radio__buttons_container {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+  
+  .semiContainer .right .radio__buttons_container div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .semiContainer .right .radio__buttons_container div input {
+    height: 15px;
+    width: 15px;
+    accent-color: rgb(239, 79, 95);
+  }
+  
+  .semiContainer .right .input_container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+  
+  .input_container button,
+  .input_container input {
+    padding: 10px 12px;
+  }
+  
+  .input_container input {
+    border: 1.5px solid gray;
+    outline: none;
+    border-radius: 5px;
+    flex: auto;
+  }
+  
+  .input_container button {
+    border: none;
+    background-color: rgb(239, 79, 95);
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .right .download__app_container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+  }
+  
+  .download__app_container h5 {
+    font-weight: 400;
+    color: gray;
+  }
+  
+  .download__app_container div {
+    display: flex;
+    gap: 16px;
+  }
+  
+  .download__app_container div img {
+    width: 35%;
+  }
+  
+@media only screen and (max-width: 1300px) {
+    .get__the_app .semiContainer .left {
+      flex: 1;
+    }
+  
+    .get__the_app .semiContainer .right {
+      flex: 1;
+    }
+  
+    .get__the_app .semiContainer {
+      width: 80%;
+    }
+  }
+  
+  @media only screen and (max-width: 900px) {
+    .get__the_app {
+      padding: 2rem;
+    }
+  
+    .get__the_app .semiContainer {
+      width: 90%;
+    }
+  }
+  
+  @media only screen and (max-width: 700px) {
+    .get__the_app {
+      padding: 3rem 0;
+    }
+    .get__the_app .semiContainer {
+      width: 80%;
+      flex-direction: column;
+    }
+  }
