--- a/style.css
+++ b/style.css
@@ -1,389 +1,464 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-.hero__section{
-    background: url(images/heroSectionBackground.png);
-    background-position: center;
-    background-size: cover;
-    color: white;
-    min-height: 60vh;
+.hero__section {
+  background: url(images/heroSectionBackground.png);
+  background-position: center;
+  background-size: cover;
+  color: white;
+  min-height: 60vh;
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px 48px;
-    height: 60px;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 48px;
+  height: 60px;
 }
 
-.navbar a{
-    text-decoration: none;
-    color: white;
-    /* font-weight: 300; */
+.navbar a {
+  text-decoration: none;
+  color: white;
+  /* font-weight: 300; */
 }
 
-.navbar__menu_container{
-    display: flex;
-    gap: 20px;
+.navbar__menu_container {
+  display: flex;
+  gap: 20px;
 }
 
-.user__icon{
-    height: 30px;
-    width: 30px;
-    border-radius: 100%;
-    border: solid 1px white;
-    justify-content: center;
-    align-items: center;
-    display: none;
+.user__icon {
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  border: solid 1px white;
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
 
-.hero__section_container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: calc(60vh - 60px); 
-    gap: 32px;
+.hero__section_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(60vh - 60px);
+  gap: 32px;
 }
 
-.hero__section_logo{
-    width: 250px;
-    height: auto;
+.hero__section_logo {
+  width: 250px;
+  height: auto;
 }
 
-.hero__section_title{
-    text-align: center;
-    font-size : 30px;
-    font-weight: 400;
+.hero__section_title {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 400;
 }
 
-.hero__section_input_container{
-    background: white;
-    padding: 10px;
-    border-radius: 10px;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
+.hero__section_input_container {
+  background: white;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
 }
 
 .input_container_location,
-.input_container_search{
-    padding: 5px;
-    border: none;
-    outline: none;
+.input_container_search {
+  padding: 5px;
+  border: none;
+  outline: none;
 }
 
-.input_container_search{
-    width: 70%;
+.input_container_search {
+  width: 70%;
 }
 
-.input_container_location{
-    width: 30%;
-    border-right: 2px solid #e0e0e0;
+.input_container_location {
+  width: 30%;
+  border-right: 2px solid #e0e0e0;
 }
 
 
 
 @media only screen and (max-width: 600px) {
-    .navbar__menu_container .link{
-        display: none;
-    }
+  .navbar__menu_container .link {
+    display: none;
+  }
 
-    .user__icon{
-        display: flex;
-    }
-    .navbar{
-        padding: 16px;
-    }
-
-    .hero__section{
-        min-height: 80vh; 
-    }
-
-    .hero__section_input_container{
-        flex-direction: column;
-        background-color: transparent;
-        width: 100%;
-    }
-    .input_container_location,
-    .input_container_search{
-        padding: 15px;
-        border-radius: 10px;
-        width: 90%;
-    }
-    .hero__section_container{
-        height: calc(80vh - 60px);
-    }
-    
-    .input_container_location{
-        border-right: none;
-    }
-}
-
-.container{
-    margin: 48px auto;
-    width: 80%;
-}
-
-.we__offer{
+  .user__icon {
     display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-    align-items: center;
-    justify-content: center;
-}
+  }
 
-.we__offer .card{
-    border-radius: 10px;
-    overflow: hidden;
-    border: 1px solid #e0e0e0;
-    transition: all 300ms ease-out;
-}
+  .navbar {
+    padding: 16px;
+  }
 
-.we__offer .card img{
+  .hero__section {
+    min-height: 80vh;
+  }
+
+  .hero__section_input_container {
+    flex-direction: column;
+    background-color: transparent;
     width: 100%;
-    height: 150px;
-    object-fit: cover;
-    object-position: center;
+  }
+
+  .input_container_location,
+  .input_container_search {
+    padding: 15px;
+    border-radius: 10px;
+    width: 90%;
+  }
+
+  .hero__section_container {
+    height: calc(80vh - 60px);
+  }
+
+  .input_container_location {
+    border-right: none;
+  }
 }
 
-.we__offer .card h2{
-    padding: 10px 10px 0 10px;
-    font-size: 20px;
-    font-weight: 400;
+.container {
+  margin: 48px auto;
+  width: 80%;
 }
 
-.we__offer .card p{
-    font-size: 13px;
-    padding: 0 10px 15px 10px;
+.we__offer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
 }
+
+.we__offer .card {
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid #e0e0e0;
+  transition: all 300ms ease-out;
+}
+
+.we__offer .card img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.we__offer .card h2 {
+  padding: 10px 10px 0 10px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.we__offer .card p {
+  font-size: 13px;
+  padding: 0 10px 15px 10px;
+}
+
 .we__offer .card:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 .collections h1 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .collections .sub__heading_container {
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 16px;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
-.sub__heading_container span:nth-child(2){
-    color: #ff7e8b;
-    font-size: 13px;
+.sub__heading_container span:nth-child(2) {
+  color: #ff7e8b;
+  font-size: 13px;
 }
+
 .collections_card_container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 16px;
-    margin-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-top: 24px;
 }
 
-.collections_card_container .card{
-    height: 300px;
-    min-width: 240px;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-    position: relative;
+.collections_card_container .card {
+  height: 300px;
+  min-width: 240px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  position: relative;
 }
 
-.card1{
-    background-image: url(images/collection1.jpg);
+.card1 {
+  background-image: url(images/collection1.jpg);
 }
 
-.card2{
-    background-image: url(images/collection2.jpg);
+.card2 {
+  background-image: url(images/collection2.jpg);
 }
 
-.card3{
-    background-image: url(images/collection3.jpg);
-}
-.card4{
-    background-image: url(images/collection4.jpg);
+.card3 {
+  background-image: url(images/collection3.jpg);
 }
 
-.overlay{
-    background: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.9)0%,
-        rgba(0, 0, 0, 0.05)50%,
-        rgba(0, 0, 0, 0.05)85%
-    );
-    width: 100%;
-    height: 100%;
-    display: absolute;
-    top: 0;
-    left:0;
-    border-radius: 10px;
+.card4 {
+  background-image: url(images/collection4.jpg);
+}
+
+.overlay {
+  background: linear-gradient(0deg,
+      rgba(0, 0, 0, 0.9)0%,
+      rgba(0, 0, 0, 0.05)50%,
+      rgba(0, 0, 0, 0.05)85%);
+  width: 100%;
+  height: 100%;
+  display: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
 }
 
 .collections_card_container .card .content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    color: white;
-    padding: 12px 16px;
-    font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: white;
+  padding: 12px 16px;
+  font-size: 14px;
 }
 
-.content h4{
-    font-weight: 400;
+.content h4 {
+  font-weight: 400;
 }
+
 .get__the_app {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(255, 251, 247);
-    width: 100%;
-    padding: 48px 48px;
-  }
-  
-  .get__the_app .semiContainer {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 24px;
-  }
-  
-  .get__the_app .semiContainer .left {
-    flex: 2;
-  }
-  
-  .get__the_app .semiContainer .left img {
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  .get__the_app .semiContainer .right {
-    flex: 3;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-  }
-  
-  .right h1 {
-    font-weight: 500;
-    font-size: 32px;
-  }
-  
-  .right p {
-    font-size: 14px;
-  }
-  
-  .semiContainer .right .radio__buttons_container {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
-  
-  .semiContainer .right .radio__buttons_container div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-  }
-  
-  .semiContainer .right .radio__buttons_container div input {
-    height: 15px;
-    width: 15px;
-    accent-color: rgb(239, 79, 95);
-  }
-  
-  .semiContainer .right .input_container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-  }
-  
-  .input_container button,
-  .input_container input {
-    padding: 10px 12px;
-  }
-  
-  .input_container input {
-    border: 1.5px solid gray;
-    outline: none;
-    border-radius: 5px;
-    flex: auto;
-  }
-  
-  .input_container button {
-    border: none;
-    background-color: rgb(239, 79, 95);
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .right .download__app_container {
-    display: flex;
-    flex-direction: column;
-    gap: 0.7rem;
-  }
-  
-  .download__app_container h5 {
-    font-weight: 400;
-    color: gray;
-  }
-  
-  .download__app_container div {
-    display: flex;
-    gap: 16px;
-  }
-  
-  .download__app_container div img {
-    width: 35%;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(255, 251, 247);
+  width: 100%;
+  padding: 48px 48px;
+}
+
+.get__the_app .semiContainer {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.get__the_app .semiContainer .left {
+  flex: 2;
+}
+
+.get__the_app .semiContainer .left img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.get__the_app .semiContainer .right {
+  flex: 3;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.right h1 {
+  font-weight: 500;
+  font-size: 32px;
+}
+
+.right p {
+  font-size: 14px;
+}
+
+.semiContainer .right .radio__buttons_container {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.semiContainer .right .radio__buttons_container div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.semiContainer .right .radio__buttons_container div input {
+  height: 15px;
+  width: 15px;
+  accent-color: rgb(239, 79, 95);
+}
+
+.semiContainer .right .input_container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.input_container button,
+.input_container input {
+  padding: 10px 12px;
+}
+
+.input_container input {
+  border: 1.5px solid gray;
+  outline: none;
+  border-radius: 5px;
+  flex: auto;
+}
+
+.input_container button {
+  border: none;
+  background-color: rgb(239, 79, 95);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.right .download__app_container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+
+.download__app_container h5 {
+  font-weight: 400;
+  color: gray;
+}
+
+.download__app_container div {
+  display: flex;
+  gap: 16px;
+}
+
+.download__app_container div img {
+  width: 35%;
+}
+
+/*section-1 */
+.section-1 {
+  width: 1080px;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+}
+
+.section-1-heading {
+  font-size: 2rem;
+  line-height: 1.2;
+  font-weight: 400px;
+  margin-bottom: 20px;
+  margin-left: 40px;
+}
+
+.section-1 .section-1-container .section-1-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+
+
+.section-1 .section-1-container .section-1-items .section-1-item {
+  width: 100%;
+  max-width: 33%;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgb(215, 215, 215);
+  padding: 20px;
+}
+
+.section-1-item .item-head {
+  font-size: 1.2rem;
+  color: rgb(37, 37, 37);
+  margin: 0%;
+  margin-bottom: 5px;
+}
+
+.section-1-item .item-subhead {
+  font-weight: light;
+  color: grey;
+  margin: 0%;
+}
+
+.section-2 {
+  width: 1080px;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+}
+
+.section-2-heading {
+  font-size: 2rem;
+  line-height: 1.2;
+  font-weight: 400px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+
+.section-2 .section-2-container .section-2-items .section-2-item {
+  width: 100%;
+  max-width: 90%;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgb(215, 215, 215);
+  padding: 20px;
+  font-size: large;
+}
+
 @media only screen and (max-width: 1300px) {
-    .get__the_app .semiContainer .left {
-      flex: 1;
-    }
-  
-    .get__the_app .semiContainer .right {
-      flex: 1;
-    }
-  
-    .get__the_app .semiContainer {
-      width: 80%;
-    }
+  .get__the_app .semiContainer .left {
+    flex: 1;
   }
-  
-  @media only screen and (max-width: 900px) {
-    .get__the_app {
-      padding: 2rem;
-    }
-  
-    .get__the_app .semiContainer {
-      width: 90%;
-    }
+
+  .get__the_app .semiContainer .right {
+    flex: 1;
   }
-  
-  @media only screen and (max-width: 700px) {
-    .get__the_app {
-      padding: 3rem 0;
-    }
-    .get__the_app .semiContainer {
-      width: 80%;
-      flex-direction: column;
-    }
+
+  .get__the_app .semiContainer {
+    width: 80%;
   }
+}
+
+@media only screen and (max-width: 900px) {
+  .get__the_app {
+    padding: 2rem;
+  }
+
+  .get__the_app .semiContainer {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .get__the_app {
+    padding: 3rem 0;
+  }
+
+  .get__the_app .semiContainer {
+    width: 80%;
+    flex-direction: column;
+  }
+}
