--- a/style.css
+++ b/style.css
@@ -428,6 +428,109 @@
   font-size: large;
 }
 
+.footer {
+  width: 100%;
+}
+
+.footer_section1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+}
+
+.footer_section1 img {
+  width: 120px;
+  height: auto;
+}
+
+.section1__buttonContainer {
+  display: flex;
+  gap: 16px;
+}
+
+.section1__buttonContainer button {
+  padding: 5px;
+  width: 90px;
+  border: 1px solid gray;
+  background-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.navigation_container {
+  display: grid;
+  width: 90%;
+  margin: auto;
+
+  /*grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+  grid-template-columns: repeat(5, 1fr);
+
+  gap: 1rem;
+  padding: 48px 0;
+
+}
+
+.link__container {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.link__container h5 {
+  font-weight: 500;
+  font-size: 14px;
+  margin-bottom: 5px;
+  letter-spacing: 0.8px;
+}
+
+.footer__link {
+  text-decoration: none;
+  color: gray;
+  font-size: 13px;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+}
+
+.footer__link:hover {
+  color: black;
+}
+
+.social__links_container {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.social__links_container button {
+  background-color: black;
+  border: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social__links_container button i {
+  color: white;
+  font-size: 13px;
+}
+
+.footer__storage_logos {
+  width: 100%;
+}
+
+.footer .disclaimer {
+  width: 90%;
+  margin: auto;
+  padding: 20px 0;
+  font-size: 12px;
+  color: gray;
+  border-top: 1px solid gray;
+}
+
 @media only screen and (max-width: 1300px) {
   .get__the_app .semiContainer .left {
     flex: 1;
@@ -440,6 +543,7 @@
   .get__the_app .semiContainer {
     width: 80%;
   }
+
 }
 
 @media only screen and (max-width: 900px) {
@@ -460,5 +564,155 @@
   .get__the_app .semiContainer {
     width: 80%;
     flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .navigation_container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .navigation_container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+
+  .footer_section1 {
+    flex-direction: column;
+    gap: 16px;
+    align-items: flex-start;
+  }
+
+  .navigation_container {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+@media only screen and (max-width: 1300px) {
+
+  .section-1-heading {
+    width: 900px;
+    justify-content: center;
+  }
+
+  .section-1 .section-1-container .section-1-items {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 80%;
+    padding: 20px;
+  }
+
+  .section-1-container {
+    width: 100%;
+    justify-content: center;
+    margin-left: 50px;
+  }
+
+  .section-2-heading {
+    width: 400px;
+  }
+
+  .section-2 .section-2-container .section-2-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 1200px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+
+  .section-1-heading {
+    width: 700px;
+    justify-content: center;
+    margin-left: 70px;
+  }
+
+  .section-1 .section-1-container .section-1-items {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 70%;
+
+  }
+
+  .section-2-heading {
+    width: 400px;
+  }
+
+  .section-2 .section-2-container .section-2-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 750px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  .section-1-heading {
+    width: 500px;
+    margin-left: 60px;
+    justify-content: center;
+  }
+
+  .section-1 .section-1-container .section-1-items {
+    display: flex;
+    flex-wrap: wrap;
+    width : 50%
+  }
+
+  .section-2-heading {
+    width: 500px;
+  }
+
+  .section-2 .section-2-container .section-2-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 500px;
+  }
+
+}
+
+@media only screen and (max-width: 450px) {
+  .section-1-heading {
+    width: 250px;
+    margin-left: 80px;
+    justify-content: center;
+  }
+
+  .section-1 .section-1-container .section-1-items {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .section-1-container {
+    width: 125%;
+    justify-content: center;
+    margin-left: 50px;
+  }
+
+  .section-2-heading {
+    width: 230px;
+    margin-left: 50px;
+    justify-content: center;
+  }
+
+  .section-2 .section-2-container .section-2-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 200px;
+  }
+
+  .section-2-container {
+    width: 600px;
+    justify-content: center;
+    margin-left: 50px;
   }
 }
